# gvp

./: .gitignore  README.md  pyproject.toml
.github/workflows/: formatting.yml  publish.yml
examples/: download.ipynb
src/gvp/: __init__.py  const.py  download.py  gvp.py  query.py  utils.py  validator.py
src/gvp/resources/: database.py  example.env  gvp_202507041754.xlsx
