[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"

[project]
name =  "gvp"
version = "0.0.5"
authors = [
    {name = "Martanto", email = "martanto@live.com"},
]
description = "The Volcanoes of the World database is a catalog of Holocene and Pleistocene volcanoes, and eruptions from the past 12,000 years."
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["gvp", "volcano", "volcanism", "observatory", "volcanoes", "volcanic", "unrest", "database", "holocene"]
requires-python = ">=3.10"
dependencies = [
    "xlsxwriter>=3.2.5",
    "openpyxl>=3.1.5",
    "pandas>=2.2.2",
    "importlib-resources",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
base = [
    "xlsxwriter",
    "openpyxl",
    "pandas",
    "importlib-resources"
]

[project.urls]
Homepage = "https://github.com/martanto/gvp"
Issues = "https://github.com/martanto/gvp/issues"