[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"

[project]
name =  "gvp"
version = "0.1.0"
authors = [
    {name = "Martanto", email = "martanto@live.com"},
]
description = "The Volcanoes of the World database is a catalog of Holocene and Pleistocene volcanoes, and eruptions from the past 12,000 years."
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["gvp", "volcano", "volcanism", "observatory", "volcanoes", "volcanic", "unrest", "database", "holocene"]
requires-python = ">=3.10"
dependencies = [
    "xlsxwriter>=3.2.5",
    "openpyxl>=3.1.5",
    "pandas>=2.2.2",
    "importlib-resources",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = [
    "isort",
    "black[d]",
    "xlsxwriter",
    "openpyxl",
    "pandas",
    "importlib-resources"
]

[tool.black]
line-length = 88
target-version = ['py310','py311','py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | examples
  | output
  | _build
  | build
  | dist
  | venv
  | \.env
  | \.flake8
)/
'''

[tool.isort]
profile = "black"
src_paths = ["src"]
import_heading_stdlib = "Standard library imports"
import_heading_thirdparty = "Third party imports"
import_heading_firstparty = "Project imports"
known_first_party = [
	"gvp",
]
known_third_party = [
    "pandas",
]

[project.urls]
Homepage = "https://github.com/martanto/gvp"
Issues = "https://github.com/martanto/gvp/issues"